# WallSwapper

./: .gitignore  Cargo.toml  README.md
server/: test.py
src/: application.rs  connect.html  connect.js  index.html  main.rs  pageHandler.js  styles.css  test.html  wallpaper_manager.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api_point.rs  background_manager.rs  main.rs
