[package]
name = "wall_swapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyring = "2.3.2"
tray-item = "0.9.0"
wallpaper = { version = "3.2.0", features = ["from_url"] }

[build-dependencies]
embed-resource = "2.3"
